Improve UI and function

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                             <option value="EH/s">EH/s</option>
                         </select>
                     </div>
+                    <div class="preset-chips">
+                        <button data-hash="10" data-unit="MH/s">10 MH/s</button>
+                        <button data-hash="100" data-unit="MH/s">100 MH/s</button>
+                        <button data-hash="1" data-unit="GH/s">1 GH/s</button>
+                    </div>
                     </div>
                     <div class="form-group">
                     <label for="pool-fee">Pool Fee (%):
